[gd_scene load_steps=9 format=3 uid="uid://kcqndeb68f11"]

[ext_resource type="Texture2D" uid="uid://sgmbb8wk0elb" path="res://asset/enemy/blue-enemy-Sheet.png" id="1_84m2a"]
[ext_resource type="Script" path="res://enemy/blue.gd" id="1_yhhdn"]
[ext_resource type="PackedScene" uid="uid://clw1cyo74dvvq" path="res://common/hurtbox.tscn" id="2_cc1j4"]
[ext_resource type="PackedScene" uid="uid://dit4djknhylg6" path="res://common/hitbox.tscn" id="3_xh7g0"]
[ext_resource type="PackedScene" uid="uid://b4h2kx2hgqqkv" path="res://common/stats.tscn" id="4_viu1m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3cr6f"]
size = Vector2(17, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fglw6"]
size = Vector2(15, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w2lqy"]
size = Vector2(11, 2)

[node name="Blue" type="Node2D"]
script = ExtResource("1_yhhdn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_84m2a")
offset = Vector2(0, -7)
hframes = 3

[node name="Hurtbox" parent="." instance=ExtResource("2_cc1j4")]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-0.5, -6.5)
shape = SubResource("RectangleShape2D_3cr6f")

[node name="Hitbox" parent="." instance=ExtResource("3_xh7g0")]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-0.5, -6)
shape = SubResource("RectangleShape2D_fglw6")

[node name="Stats" parent="." instance=ExtResource("4_viu1m")]

[node name="Jumpbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jumpbox"]
position = Vector2(-0.5, -12)
shape = SubResource("RectangleShape2D_w2lqy")

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="health_empty" from="Stats" to="." method="_on_stats_health_empty"]
[connection signal="body_entered" from="Jumpbox" to="." method="_on_jumpbox_body_entered"]
